--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "matplotlib>=3.10.3",
     "openai>=1.97.0",
     "pandas>=2.3.1",
+    "seaborn>=0.13.2",
     "toml>=0.10.2",
     "torch>=2.7.1",
     "torchaudio>=2.7.1",
